--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-python-dateutil
 dj-database-url==0.5.0
 Django==2.1.4
+psycopg2==2.7.6.1
+python-dateutil==2.7.5
+python-decouple==3.1
 pytz==2018.7
+six==1.11.0
